# gfr

./: Cargo.toml
src/: main.rs
src/data/: config.rs  mod.rs
src/data/sql/: mod.rs  sqlite.sql
src/ui/: main_window.rs  mod.rs
src/ui/page/: home.rs  mod.rs  page_data.rs  register.rs
src/ui/page/register_page/: apartments.rs  empty.rs  mod.rs
src/ui/widget/: mod.rs
