[package]
name = "gfr"
version = "0.1.0"
authors = ["kraxarn <me@kraxarn.com>"]
edition = "2018"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "^0.24"
dirs = "^3.0"
simplelog = "^0.7"
log = "^0.4"

[dependencies.gtk]
version = ""
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]